Added Portfolio content, Styled Portfolio in CSS, and saved portfolio's pictures in assets/images folder.

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,12 @@
 <html>
 
     <head>
+
         <meta charset="utf-8">
         <title>Armando Gautreaux's Portfolio</title>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
+
     </head>
 
     <body>
@@ -51,25 +53,32 @@
             <h2 class="title">Contact</h2> <!-- Title -->
 
             <div class="content"> <!-- Content starts here -->
-                <form action="#" method="post">
-                    <fieldset class="contact-form">
+
+                <form action="#" method="post"> <!-- Contact form starts here -->
+
+                    <fieldset class="contact-form"> <!-- Fieldset starts here -->
+
                         <label>
                             Name
                             <input type="text" name="name" placeholder="John Smith" required>
                         </label>
+
                         <label>
                             Email
                             <input type="email" name="email" placeholder="example@gmail.com" required>
                         </label>
+
                         <label>
                             Message
-                            <textarea name="message"></textarea>
+                            <textarea name="message">
+                            </textarea>
                         </label>
-                    </fieldset>
-                    <input class="btn btn-default" type="submit" name="submit">
+                        
+                    </fieldset> <!-- Fieldset ends here -->
 
-                </form>
+                    <input class="btn btn-default" type="submit" name="submit"> <!-- Button -->
 
+                </form> <!-- Contact form ends here -->
 
             </div> <!-- Content ends here -->
 
@@ -90,4 +99,5 @@
         </footer>
 
     </body>
+    
 </html>
