--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 
     <head>
+
         <meta charset="utf-8">
         <title>Armando Gautreaux's Portfolio</title>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
+
     </head>
 
     <body>
@@ -50,21 +52,21 @@
 
             <h2 class="title">About Me</h2> <!-- Title -->
 
-            <div class="content"> <!-- Content starts here -->
+            <div class="content"> <!-- Body content starts here -->
 
                 <img src="assets/images/about-me.jpg" class="float-image">
 
                 <p>
-                    Hello, my name is Armando and I have created this website as part of my first homework from the SMU Coding Program. The present theme is made up of 3 parts. The first page, is this site (index.html), which includes a navigation bar in the top with some hover effects, a main content section, where this information is being displayed (About Me), and a basic footer with an achor link, to return to this homepage everytime that is clicked.
+                    Hello, my name is Armando and I have created this website as part of my first homework assignment from the SMU Coding Program. The present theme is made up of 3 parts. The first page, is this site (index.html). It includes a navigation bar at the top with some hover effects, a main content section, displaying general information about the website, and a basic footer with an achor link, which will return a user to this homepage anytime it is selected.
                 </p>
                 <p>
-                    The second page is called portfolio, in there, I have include some random pictures that represent future projects that I will develop during this academic program.
+                    The second page is called portfolio, and includes some random pictures that represent future projects that I will develop during this academic program.
                 </p>
                 <p>
-                    Finally, the last part of this Website is a contact section, where, I have added a simple contact form so people who have questions about my projects can reach out to me. Overall, this is what this website is all about. Thank You for reading.
+                    Finally, the last part of this Website is a contact section, where, I have added a simple contact form where people who have questions about my projects can reach out to me. Overall, this is what this website is all about. Thank You for reading.
                 </p>
 
-            </div> <!-- Content ends here -->
+            </div> <!-- Body content ends here -->
 
         </section>
 
@@ -83,4 +85,5 @@
         </footer>
 
     </body>
+    
 </html>
