--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,12 @@
 <html>
 
     <head>
+
         <meta charset="utf-8">
         <title>Armando Gautreaux's Portfolio</title>
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
+
     </head>
 
     <body>
@@ -46,12 +48,80 @@
 
         <!-- Main Content -->
 
-        <section class="main container">
+        <section class="main container"> 
 
             <h2 class="title">Portfolio</h2> <!-- Title -->
 
             <div class="content"> <!-- Content starts here -->
 
+                <div class="grid"> <!-- Grid System with 3 colums starts here -->
+
+                    <div class="col-1-3">
+                        <a href="https://www.chihuly.com/" target="_blank">
+                            <div class="img-wrap">
+                                <img src="/assets/images/portfolio1.jpg" alt="#">
+                                <div class="img-caption">
+                                    <h3>
+                                        Chihuly
+                                    </h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1-3">
+                        <a href="https://www.spaceneedle.com/home/" target="_blank">
+                            <div class="img-wrap">
+                                <img src="/assets/images/portfolio2.jpg" alt="#">
+                                <div class="img-caption">
+                                    <h3>
+                                        Space Neddle
+                                    </h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1-3">
+                        <a href="http://www.frenchquarter.com/" target="_blank">
+                            <div class="img-wrap">
+                                <img src="/assets/images/portfolio3.jpg" alt="#">
+                                <div class="img-caption">
+                                    <h3>
+                                        French Quarter
+                                    </h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="col-1-3">
+                        <a href="https://reuniontower.com/" target="_blank">
+                            <div class="img-wrap">
+                                <img src="/assets/images/portfolio4.jpg" alt="#">
+                                <div class="img-caption">
+                                    <h3>
+                                        Reunion Tower
+                                    </h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    
+                    <div class="col-1-3">
+                        <a href="https://www.galveston.com/" target="_blank">
+                            <div class="img-wrap">
+                                <img src="/assets/images/portfolio5.jpg" alt="#">
+                                <div class="img-caption">
+                                    <h3>
+                                    Galveston
+                                    </h3>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                </div> <!-- Grid System with 3 colums ends here -->
 
             </div> <!-- Content ends here -->
 
@@ -72,4 +142,5 @@
         </footer>
 
     </body>
+
 </html>
